tests/integration/snapshots/integration__simple_additions__simple_additions.snap
---
source: tests/simple_additions.rs
expression: blame
---
{
    1: "test_user",
    2: "Claude",
    3: "Claude",
}
