tests/integration/snapshots/integration__simple_additions__simple_additions_new_file_not_git_added.snap
---
source: tests/simple_additions.rs
expression: authorship_log
---
AuthorshipLogV3 {
    attestations: [
        FileAttestation {
            file_path: "new_file.txt",
            entries: [
                AttestationEntry {
                    hash: "1cee1d9",
                    line_ranges: [
                        Range(
                            4,
                            5,
                        ),
                    ],
                },
            ],
        },
    ],
    metadata: AuthorshipMetadata {
        schema_version: "authorship/3.0.0",
        base_commit_sha: "initial",
        prompts: {
            "1cee1d9": PromptRecord {
                agent_id: AgentId {
                    tool: "cursor",
                    id: "test_session_fixed",
                    model: "claude-3-sonnet",
                },
                human_author: Some(
                    "Test User",
                ),
                messages: [],
                total_additions: 2,
                total_deletions: 0,
                accepted_lines: 2,
                overriden_lines: 0,
            },
        },
    },
}
