tests/integration/snapshots/integration__simple_additions__stage_middle_lines_leave_edges_unstaged-2.snap
---
source: tests/simple_additions.rs
expression: blame
---
{
    1: "Not Committed Yet",
    2: "Test User",
    3: "cursor",
    4: "cursor",
    5: "cursor",
    6: "Not Committed Yet",
}
