tests/integration/snapshots/integration__simple_additions__stage_specific_lines_only-2.snap
---
source: tests/simple_additions.rs
expression: blame
---
{
    1: "Test User",
    2: "cursor",
    3: "Test User",
    4: "Not Committed Yet",
    5: "cursor",
}
