tests/integration/snapshots/integration__simple_additions__stage_specific_lines_only.snap
---
source: tests/simple_additions.rs
expression: authorship_log
---
AuthorshipLogV3 {
    attestations: [
        FileAttestation {
            file_path: "test.ts",
            entries: [
                AttestationEntry {
                    hash: "1cee1d9",
                    line_ranges: [
                        Range(
                            5,
                            7,
                        ),
                    ],
                },
            ],
        },
    ],
    metadata: AuthorshipMetadata {
        schema_version: "authorship/3.0.0",
        base_commit_sha: "9f611ed52a6ceaa44363d4e574a65166de356095",
        prompts: {
            "1cee1d9": PromptRecord {
                agent_id: AgentId {
                    tool: "cursor",
                    id: "test_session_fixed",
                    model: "claude-3-sonnet",
                },
                human_author: Some(
                    "Test User",
                ),
                messages: [],
                total_additions: 6,
                total_deletions: 0,
                accepted_lines: 6,
                overriden_lines: 0,
            },
        },
    },
}
